--- a/family-tree/package.json
+++ b/family-tree/package.json
@@ -14,6 +14,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
+    "fuse.js": "^7.1.0",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.5",
