--- a/family-tree/package.json
+++ b/family-tree/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "validate:backup": "node scripts/validate-ui-backup.cjs"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
