--- a/family-tree/package.json
+++ b/family-tree/package.json
@@ -30,14 +30,17 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axe-core": "^4.10.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "puppeteer": "^24.16.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
